[package]
name = "rocket-launcher-gtk4"
version = "0.1.0"
edition = "2021"

[dependencies.gtk]
package = "gtk4"
version = "0.3.1"
features = ["v4_4"]

[dependencies]
rocket-launcher-core = { path = "../rocket-launcher-core" }
rust-fsm = { git = "https://github.com/funczz/rust-fsm.git",  tag = "v0.1.0" }
rust-sam = { git = "https://github.com/funczz/rust-sam.git",  tag = "v0.1.0" }